script/iptables
# Firewall configuration written by system-config-firewall
# # Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 10000:11000 -j ACCEPT
-A INPUT -m state -s 61.164.49.90 2222 -j ACCEPT
-A INPUT -m state -s 61.164.49.90 --state NEW -m tcp -p tcp --dport 3306 -j ACCEPT

-A INPUT -s xmr.crypto-pool.fr -j DROP
-A OUTPUT -d xmr.crypto-pool.fr -j DROP

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
